# supasim

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE_HEADER  for-devs.md  planned-features.md  readme.md  release-schedule.md  rustfmt.toml  slangc-help.txt  taplo.toml  test.glsl
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: cargo-update.yml  ci.yml  rust.yml  update-license-header.yml
crates/supasim/: Cargo.toml
crates/supasim-abstract/: Cargo.toml
crates/supasim-abstract/src/: lib.rs
crates/supasim-dev-utils/: Cargo.toml
crates/supasim-dev-utils/src/: lib.rs  testing.rs
crates/supasim-gui-helper/: Cargo.toml
crates/supasim-gui-helper/src/: lib.rs
crates/supasim-hal/: Cargo.toml  add.metal
crates/supasim-hal/examples/: copy_buffers.rs  hal_buffer_copy.rs
crates/supasim-hal/src/: dummy.rs  external_wgpu.rs  lib.rs  metal.rs  vulkan.rs  wgpu.rs
crates/supasim-hal/src/dummy/: mod.rs
crates/supasim-hal/src/metal/: mod.rs
crates/supasim-hal/src/tests/: mod.rs  test_double.slang
crates/supasim-hal/src/vulkan/: command_recorder.rs  init.rs  mod.rs  test_add.slang  test_add.spirv  test_double.spirv
crates/supasim-hal/src/wgpu/: mod.rs
crates/supasim-kernels/: Cargo.toml
crates/supasim-kernels/examples/: simple-kernels.rs
crates/supasim-kernels/src/: lib.rs  tests.rs
crates/supasim-macros/: Cargo.toml
crates/supasim-macros/src/: lib.rs
crates/supasim-shaders/: Cargo.toml
crates/supasim-shaders/examples/: simple-shaders.rs  test.slang
crates/supasim-shaders/src/: lib.rs  tests.rs
crates/supasim-types/: Cargo.toml
crates/supasim-types/src/: lib.rs
crates/supasim/examples/: add_numbers.rs  basic_buffer_copy.rs  buddhabrot.rs  buddhabrot.slang  buddhabrot_max.wgsl  buddhabrot_render.wgsl
crates/supasim/examples/buddhabrot/: buddhabrot.rs  buddhabrot.slang  buddhabrot_max.wgsl  buddhabrot_render.wgsl  readme.md
crates/supasim/examples/gravity/: gravity.slang
crates/supasim/src/: api.rs  api_type.rs  lib.rs  record.rs  residency.rs  sync.rs  sync_thread.rs
crates/supasim/src/buffer/: access.rs  mod.rs  ood.rs  residency.rs
crates/supasim/src/sync/: mod.rs  stream_thread.rs
crates/supasim/src/tests/: add_numbers.rs  basic_buffer_copy.rs  buffer_export.rs  concurrent_map_gpu_use.rs  double_submit_same_buffer.rs  mod.rs  mut_map_readback.rs
crates/supasim/tests/: vulkan_backend.rs  wgpu_dx12_backend.rs  wgpu_metal_backend.rs  wgpu_vulkan_backend.rs
crates/supasim/tests/common/: mod.rs
docs/: Current Priority Issues.md  Explanation.md  for-devs.md  kernels.md
docs/superpowers/plans/: 2026-07-09-finish-residency-overhaul.md
docs/superpowers/specs/: 2026-07-09-finish-residency-overhaul-design.md
examples/buddhabrot/: buddhabrot.rs  buddhabrot.slang  buddhabrot_max.wgsl  buddhabrot_render.wgsl
examples/collatz/: collatz.rs  collatz.slang  readme.md
examples/gravity/: readme.md
kernels/: readme.md  test_add.slang  test_double.slang
scripts/: update-license-header.py
supasim/: Cargo.toml
tests/: Cargo.toml
