# BEGIN LICENSE
#   SupaSim, a GPUGPU and simulation toolkit.
#   Copyright (C) 2025 SupaMaggie70 (Magnus Larsson)
#
#
#   SupaSim is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version 3
#   of the License, or (at your option) any later version.
#
#   SupaSim is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
# END LICENSE
[workspace]
resolver = "2"
members = [
  "crates/supasim",
  "crates/supasim-hal",
  "crates/supasim-macros",
  "crates/supasim-shaders",
  "crates/supasim-types",
]

[workspace.package]
version = "0.0.1"
authors = ["SupaMaggie70 <supamaggie70@gmail.com>"]
repository = "https://github.com/supasim/supasim"
edition = "2024"
rust-version = "1.85"
keywords = ["hpc", "simulation"]
license = "GPL-3.0"


[workspace.dependencies]
anyhow = "1.0"
bitflags = "2.9"
bytemuck = { version = "1.21", features = ["derive"] }
env_logger = "0.11"
getrandom = "0.3"
libloading = "0.8"
log = { version = "0.4" }
nalgebra = "0.33"
rand = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tempfile = "3.19"
scopeguard = "1.2"
daggy = "0.8.1"

hal = { package = "supasim-hal", path = "crates/supasim-hal" }
macros = { package = "supasim-macros", path = "crates/supasim-macros" }
shaders = { package = "supasim-shaders", path = "crates/supasim-shaders" }
types = { package = "supasim-types", path = "crates/supasim-types" }
