# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 Magnus Larsson
#   SPDX-License-Identifier: MIT OR Apache-2.0
# END LICENSE

[workspace]
resolver = "2"
members = [
  "crates/supasim",
  "crates/supasim-dev-utils",
  "crates/supasim-hal",
  "crates/supasim-kernels",
  "crates/supasim-types",
]
default-members = [
  "crates/supasim",
  "crates/supasim-dev-utils",
  "crates/supasim-types",
  "crates/supasim-kernels",
  "crates/supasim-hal",
]

[workspace.package]
version = "0.0.2"
authors = ["SupaMaggie70 <supamaggie70@gmail.com>"]
repository = "https://github.com/supasim/supasim"
edition = "2024"
rust-version = "1.90"
keywords = ["hpc", "gpu"]
categories = []
license = "MIT OR Apache-2.0"
homepage = "https://supasim.github.io/"


[workspace.dependencies]
# Many of these aren't yet used by supasim
anyhow = "1.0"
bitflags = "2.10"
bytemuck = { version = "1.24", features = ["derive"] }
env_logger = "0.11"
getrandom = "0.3"
libloading = "0.8"
log = { version = "0.4" }
rand = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tempfile = "3.23"
scopeguard = "1.2"
daggy = "0.9"
thunderdome = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-log = "0.2"
paste = "1.0"

pollster = { version = "0.4" }

wgpu = { version = "27.0", default-features = false, features = [
  "spirv",
  "dx12",
  "metal",
  "vulkan",
  "webgpu",
  "std",
] }

hal = { package = "supasim-hal", path = "crates/supasim-hal", default-features = false, version = "0.0.2" }
kernels = { package = "supasim-kernels", path = "crates/supasim-kernels", version = "0.0.2" }
types = { package = "supasim-types", path = "crates/supasim-types", version = "0.0.2" }
dev-utils = { package = "supasim-dev-utils", path = "crates/supasim-dev-utils", version = "0.0.2" }
