[package]
name = "supasim-abstract"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true

hal.workspace = true
types.workspace = true
shaders.workspace = true
