# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 Magnus Larsson
#   SPDX-License-Identifier: MIT OR Apache-2.0
# END LICENSE

[package]
name = "supasim-dev-utils"
description = "A set of utilities used internally by supasim, such as for testing"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
tracing-subscriber.workspace = true
tracing.workspace = true
paste.workspace = true
env_logger.workspace = true
log.workspace = true
