# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 SupaMaggie70 (Magnus Larsson)
#
#
#   SupaSim is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version 3
#   of the License, or (at your option) any later version.
#
#   SupaSim is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
# END LICENSE
[package]
name = "supasim-hal"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[features]
default = ["vulkan", "wgpu"]
cuda = [
  # "cust"
] # Potential cuda libraries: cust, cudarc
wgpu = ["dep:wgpu", "pollster"]
vulkan = ["ash", "gpu-allocator"]

[dependencies]
thiserror.workspace = true

types.workspace = true
bytemuck.workspace = true
log.workspace = true
env_logger.workspace = true
scopeguard.workspace = true
tracing.workspace = true

# Vulkan dependencies
ash = { version = "0.38", optional = true, features = ["debug"] }
gpu-allocator = { version = "0.27", optional = true, features = ["vulkan"] }

# WGPU dependencies
wgpu = { workspace = true, optional = true }
pollster = { version = "0.4", optional = true }

# Cuda dependencies
# cust = { version = "0.3", optional = true }
