# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 SupaMaggie70 (Magnus Larsson)
#
#
#   SupaSim is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version 3
#   of the License, or (at your option) any later version.
#
#   SupaSim is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
# END LICENSE
[package]
name = "supasim-hal"
description = "A hardware abstraction layer allowing easy use of multiple GPU libraries, made for supasim."
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = ["vulkan", "wgpu", "metal", "external_wgpu"]
cuda = [
  # "cust"
] # Potential cuda libraries: cust, cudarc
wgpu = ["dep:wgpu", "pollster", "external_wgpu"]
external_wgpu = ["dep:wgpu", "ash", "wgpu/wgsl"]
vulkan = ["ash", "gpu-allocator"]
metal = [
  "objc2",
  "objc2-metal",
  "dispatch2",
  "kernels/msl-out",
  "kernels/opt-valid",
]

[dependencies]

types.workspace = true
# I'm putting this here for now. Otherwise, the metal feature tries to enable
# kernels/opt-valid for compiling without actually bringing in the dependencies,
# which is probably a bug in cargo or something but it breaks my project. So for
# now, supasim-hal is a little more bloated than it needs to be
kernels.workspace = true

thiserror.workspace = true
bytemuck.workspace = true
log.workspace = true
env_logger.workspace = true
scopeguard.workspace = true
tracing.workspace = true

# Vulkan dependencies
ash = { version = "0.38", optional = true, features = ["debug"] }
gpu-allocator = { git = "https://github.com/supasim/gpu-allocator.git", branch = "external-memory-vulkan", optional = true, features = [
  "vulkan",
] }

# WGPU dependencies
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

# Cuda dependencies
# cust = { version = "0.3", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
# Metal dependencies

# Apple's programming model, like Windows's COM
objc2 = { version = "0.6", optional = true }
# Actual metal dependency
objc2-metal = { version = "0.3", optional = true }
# Required for "dispatch data" which is how you pass bytes in metal apparently
dispatch2 = { version = "0.3", optional = true }
# Needed for common types like NSString and NSError
objc2-foundation = { version = "0.3" }


[dev-dependencies]
dev-utils.workspace = true

[[example]]
name = "hal_buffer_copy"
path = "examples/hal_buffer_copy.rs"
required-features = ["wgpu"]
