# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 SupaMaggie70 (Magnus Larsson)
#
#
#   SupaSim is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version 3
#   of the License, or (at your option) any later version.
#
#   SupaSim is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
# END LICENSE
[package]
name = "supasim-kernels"
description = "A kernel/shader compiling library made for use with supasim"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[features]
msl-out = ["spirv-cross"]
wgsl-out = ["naga", "naga/wgsl-out"]
dxil-out = ["hassle-rs"]
opt-valid = ["spirv-tools-sys", "spirv-cross"]
spirv-cross = ["spirv-cross-sys"]

[dependencies]
naga = { version = "26.0", default-features = false, features = [
  "spv-in",
], optional = true }
anyhow.workspace = true
slang = { package = "shader-slang", version = "0.1.0" }
rand.workspace = true
tempfile.workspace = true
spirv-cross-sys = { package = "supasim-spirv-cross-sys", git = "https://github.com/supasim/spirv-cross-sys.git", optional = true }
bytemuck.workspace = true
spirv-tools-sys = { package = "supasim-spirv-tools-sys", git = "https://github.com/supasim/spirv-tools-sys.git", optional = true }
# Used to free objects created by other libraries
libc = "0.2"
hassle-rs = { version = "0.12", optional = true }

types.workspace = true

[[example]]
name = "simple-kernels"
path = "examples/simple-kernels.rs"
required-features = ["msl-out", "wgsl-out", "dxil-out", "opt-valid"]

[dev-dependencies]
serde_json.workspace = true
