# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 Magnus Larsson
#   SPDX-License-Identifier: MIT OR Apache-2.0
# END LICENSE

[package]
name = "supasim-kernels"
description = "A kernel/shader compiling library made for use with supasim"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[features]
msl-out = ["spirv-cross"]
wgsl-out = ["naga", "naga/wgsl-out"]
dxil-out = ["hassle-rs"]
opt-valid = ["spirv-tools-sys", "spirv-cross"]
spirv-cross = ["spirv-cross-sys"]

[dependencies]
naga = { version = "27.0", default-features = false, features = [
  "spv-in",
], optional = true }
anyhow.workspace = true
slang = { package = "shader-slang", version = "0.1.0" }
rand.workspace = true
tempfile.workspace = true
spirv-cross-sys = { package = "supasim-spirv-cross-sys", version = "0.0.2", optional = true }
bytemuck.workspace = true
spirv-tools-sys = { package = "supasim-spirv-tools-sys", version = "0.0.2", optional = true }
# Used to free objects created by other libraries
libc = "0.2"
hassle-rs = { version = "0.12", optional = true }

types.workspace = true

[[example]]
name = "simple-kernels"
path = "examples/simple-kernels.rs"
required-features = ["msl-out", "wgsl-out", "dxil-out", "opt-valid"]

[dev-dependencies]
serde_json.workspace = true
