[package]
name = "supasim-shaders"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[features]
#default = ["msl-out", "wgsl-out"]
msl-stable-out = ["spirv_cross"]
wgsl-out = ["naga"]
opt-valid = ["spirv-tools-sys", "spirv_cross"]


[dependencies]
naga = { version = "24.0", features = ["spv-in", "wgsl-out"], optional = true }
anyhow.workspace = true
slang = { git = "https://github.com/SupaMaggie70Incorporated/slang-rs.git" }
rand.workspace = true
tempfile.workspace = true
spirv_cross = { version = "0.23", features = [
    "msl",
    "hlsl",
    "glsl",
], optional = true } # git = "https://github.com/SupaMaggie70Incorporated/spirv_cross.git"
bytemuck.workspace = true
spirv-tools-sys = { git = "https://github.com/SupaMaggie70Incorporated/spirv-tools.git", optional = true }
libc = "0.2"

[[example]]
name = "simple-shaders"
path = "examples/simple-shaders.rs"
required-features = ["msl-stable-out", "wgsl-out", "opt-valid"]
