[package]
name = "supasim-shaders"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[features]
#default = ["msl-out", "wgsl-out"]
msl-stable-out = ["spirv-cross"]
wgsl-out = ["naga"]
dxil-out = ["hassle-rs"]
opt-valid = ["spirv-tools-sys", "spirv-cross"]
spirv-cross = ["spirv-cross-sys"]


[dependencies]
naga = { version = "24.0", features = ["spv-in", "wgsl-out"], optional = true }
anyhow.workspace = true
slang = { git = "https://github.com/supasim/slang-rs.git" }
rand.workspace = true
tempfile.workspace = true
serde.workspace = true
spirv-cross-sys = { git = "https://github.com/supasim/spirv-cross-sys.git", optional = true }
#spirv_cross = { version = "0.23", features = [
#    "msl",
#    "hlsl",
#    "glsl",
#], optional = true } # git = "https://github.com/supasim/spirv_cross.git"
bytemuck.workspace = true
spirv-tools-sys = { git = "https://github.com/supasim/spirv-tools.git", optional = true }
libc = "0.2"
hassle-rs = { version = "0.11", git = "https://github.com/supasim/hassle-rs.git", optional = true }

types.workspace = true

[[example]]
name = "simple-shaders"
path = "examples/simple-shaders.rs"
required-features = ["msl-stable-out", "wgsl-out", "dxil-out", "opt-valid"]
# Run command: cargo run --example simple-shaders --features="msl-stable-out wgsl-out dxil-out opt-valid"
