# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 Magnus Larsson
#   SPDX-License-Identifier: MIT OR Apache-2.0
# END LICENSE

[package]
name = "supasim-types"
description = "A set of types for supasim crates for dependency graph purposes"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
wgpu.workspace = true
