# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 SupaMaggie70 (Magnus Larsson)
#
#
#   SupaSim is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version 3
#   of the License, or (at your option) any later version.
#
#   SupaSim is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
# END LICENSE
[package]
name = "supasim"
description = "A compute-oriented GPU usage library"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
readme = "../../readme.md"

[features]
default = ["vulkan", "wgpu", "metal"]
cuda = ["hal/cuda"]
# The wgpu feature flag will enable both reexporting wgpu and the wgpu backend in hal
wgpu = ["hal/wgpu", "hal/external_wgpu"]
vulkan = ["hal/vulkan"]
metal = ["hal/metal"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
thunderdome.workspace = true
paste.workspace = true
parking_lot = "0.12"

types.workspace = true
hal = { workspace = true, default-features = false }

[dev-dependencies]
log.workspace = true
dev-utils.workspace = true
pollster.workspace = true
winit = "0.30"
env_logger.workspace = true
rand.workspace = true

[[example]]
name = "buddhabrot"
path = "examples/buddhabrot/buddhabrot.rs"
required-features = ["wgpu", "vulkan", "metal"]
