# BEGIN LICENSE
#   SupaSim, a GPGPU and simulation toolkit.
#   Copyright (C) 2025 Magnus Larsson
#   SPDX-License-Identifier: MIT OR Apache-2.0
# END LICENSE

[package]
name = "supasim"
description = "A compute-oriented GPU usage library"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
readme = "../../readme.md"

[features]
default = ["vulkan", "wgpu", "metal"]
# The wgpu feature flag will enable both reexporting wgpu and the wgpu backend in hal
wgpu = ["hal/wgpu"]
vulkan = ["hal/vulkan"]
metal = ["hal/metal"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
thunderdome.workspace = true
paste.workspace = true
parking_lot = "0.12"

types.workspace = true
kernels.workspace = true
hal = { workspace = true, default-features = false }
smallvec = "1.15.1"

[dev-dependencies]
log.workspace = true
dev-utils.workspace = true
pollster.workspace = true
winit = "0.30"
env_logger.workspace = true
rand.workspace = true
wgpu = { workspace = true, features = ["wgsl"] }

[[example]]
name = "buddhabrot"
path = "examples/buddhabrot/buddhabrot.rs"
required-features = ["wgpu", "vulkan", "metal"]
